--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -45,10 +45,11 @@
                             <a class="nav-link" href="#">Prenotazioni</a>
                           </li>  
                           <li class="nav-item active">
-                            <a class="nav-link" href="#">Accedi</a>
+                            <asp:Button ID="BTMsinging" runat="server" Text="Accedi" OnClick="BTMlogin_Click" />
+                              <a class="nav-link" href="#">Accedi</a>
                           </li>
                           <li class="nav-item">
-                              <asp:Button ID="BTMLog" runat="server" Text="Registrati" OnClick="BTMLog_Click" />
+                              <asp:Button ID="BTMLog" runat="server" Text="Registrati" OnClick="BTMnewLog_Click" />
                             <a class="nav-link" href="registrazione.aspx">Registrati</a>
                           </li>
                           <li class="nav-item">
