Inserito pulsante esci visibile solo se loggati

--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -53,6 +53,7 @@
                             <a class="nav-link" href="registrazione.aspx">Registrati</a>
                           </li>
                           <li class="nav-item">
+                              <asp:Button ID="BTMesc" runat="server" Text="ESCI" />
                             <a class="nav-link" href="#">Esci</a>
                           </li>  
 
