--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -38,6 +38,7 @@
                           
                           <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
+                              <asp:Label ID="LBLuser" runat="server" Text=""></asp:Label>
                           </li>
                         </ul>
                         <ul class="navbar-nav">
@@ -53,7 +54,7 @@
                             <a class="nav-link" href="registrazione.aspx">Registrati</a>
                           </li>
                           <li class="nav-item">
-                              <asp:Button ID="BTMesc" runat="server" Text="ESCI" />
+                              <asp:Button ID="BTMesc" runat="server" Text="ESCI" OnClick="BTMesc_Click" />
                             <a class="nav-link" href="#">Esci</a>
                           </li>  
 
