--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -73,7 +73,7 @@
             <div id="footer1" class="container-fluid">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 text-center">
-                        <p style="color:whitesmoke">&copy All right Reversed.</p>
+                        <p style="color:whitesmoke">&copy All rights Reserved.</p>
                     </div>
                 </div>
             </div>
