--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -26,7 +26,7 @@
       
         <div>
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="homepage.aspx">
                 <%--icona--%>
                 Nome Ristorante
                 </a>
@@ -43,7 +43,7 @@
                         </ul>
                         <ul class="navbar-nav">
                           <li class="nav-item active">
-                            <a class="nav-link" href="#">Prenotazioni</a>
+                            <a class="nav-link" href="prenotazioni.aspx">Prenotazioni</a>
                           </li>  
                           <li class="nav-item active">
                             <asp:Button ID="BTMlogin" runat="server" Text="Accedi" OnClick="BTMlogin_Click" />
