--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -31,33 +31,33 @@
                 <%--icona--%>
                 Nome Ristorante
                 </a>
-                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto">
+                        <ul class="navbar-nav mr-auto">
                           
                           <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <%--<a class="nav-link" href="#">About</a>--%>
                               <asp:Label ID="LBLuser" runat="server" Text=""></asp:Label>
                           </li>
                         </ul>
-                        <ul class="navbar-nav">
-                          <li class="nav-item active">
+                        <ul class="navbar-nav  ml-auto">
+                          <li class="nav-item">
                               <asp:Button ID="BTMprenota" runat="server" Text="Prenota" OnClick="BTMprenota_Click" />
-                            <a class="nav-link" href="prenotazioni.aspx">Prenotazioni</a>
+                            <%--<a class="nav-link" href="prenotazioni.aspx">Prenotazioni</a>--%>
                           </li>  
-                          <li class="nav-item active">
+                          <li class="nav-item">
                             <asp:Button ID="BTMlogin" runat="server" Text="Accedi" OnClick="BTMlogin_Click" />
-                              <a class="nav-link" href="#">Accedi</a>
+                              <%--<a class="nav-link" href="#">Accedi</a>--%>
                           </li>
                           <li class="nav-item">
                               <asp:Button ID="BTMLog" runat="server" Text="Registrati" OnClick="BTMnewLog_Click" />
-                            <a class="nav-link" href="registrazione.aspx">Registrati</a>
+                            <%--<a class="nav-link" href="registrazione.aspx">Registrati</a>--%>
                           </li>
                           <li class="nav-item">
                               <asp:Button ID="BTMesc" runat="server" Text="ESCI" OnClick="BTMesc_Click" />
-                            <a class="nav-link" href="#">Esci</a>
+                            <%--<a class="nav-link" href="#">Esci</a>--%>
                           </li>  
 
                         </ul>
