--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -28,8 +28,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="homepage.aspx">
-                <%--icona--%>
-                Nome Ristorante
+                <img src="img/symposion.png" alt="ristorante greco symposion" width="150" height="55" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
