--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -30,7 +30,7 @@
                 <a class="navbar-brand" href="homepage.aspx">
                 <img src="img/symposion.png" alt="ristorante greco symposion" width="150" height="55" />
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                      <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
