--- a/prenotazione/Site1.Master
+++ b/prenotazione/Site1.Master
@@ -30,29 +30,30 @@
                 <a class="navbar-brand" href="homepage.aspx">
                 <img src="img/symposion.png" alt="ristorante greco symposion" width="150" height="55" />
                 </a>
+               
                 <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                      <div class="collapse navbar-collapse text-right" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                           
-                          <li class="nav-item">
+                          <li class="nav-item text-left">
                             <%--<a class="nav-link" href="#">About</a>--%>
-                              <asp:Label ID="LBLuser" runat="server" Text=""></asp:Label>
-                              <asp:Label ID="LBLposti" runat="server" Text=""></asp:Label>
+                               <asp:Label ID="LBLuser" runat="server" Text=""></asp:Label>
+                <asp:Label ID="LBLposti" class="text-left" runat="server" Text=""></asp:Label>
                           </li>
                         </ul>
                         <ul class="navbar-nav  ml-auto">
                           <li class="nav-item">
-                              <asp:Button ID="BTMprenota" runat="server" Text="Prenota" OnClick="BTMprenota_Click" />
+                              <asp:Button ID="BTMprenota" class="btm" runat="server" Text="Prenota" OnClick="BTMprenota_Click" />
                             <%--<a class="nav-link" href="prenotazioni.aspx">Prenotazioni</a>--%>
                           </li>  
                           <li class="nav-item">
-                            <asp:Button ID="BTMlogin" runat="server" Text="Accedi" OnClick="BTMlogin_Click" />
+                            <asp:Button ID="BTMlogin" class="btm" runat="server" Text="Accedi" OnClick="BTMlogin_Click" />
                               <%--<a class="nav-link" href="#">Accedi</a>--%>
                           </li>
                           <li class="nav-item">
-                              <asp:Button ID="BTMLog" runat="server" Text="Registrati" OnClick="BTMnewLog_Click" />
+                              <asp:Button ID="BTMLog" class="btm" runat="server" Text="Registrati" OnClick="BTMnewLog_Click" />
                             <%--<a class="nav-link" href="registrazione.aspx">Registrati</a>--%>
                           </li>
                           <li class="nav-item">
